# example-axum-seaquery-tonic-grpc

./: .env  Cargo.toml  Dockerfile.client  Dockerfile.server  Makefile  README.md  docker-compose.yml  otel-collector.yaml  prometheus.yml  promtheus.yml  rust-toolchain.toml
.github/workflows/: build_and_push.yaml  clippy.yaml  rustfmt.yaml
crates/client/: Cargo.toml
crates/client/src/: di.rs  lib.rs  main.rs  state.rs
crates/client/src/abstract_trait/: auth.rs  category.rs  comment.rs  mod.rs  posts.rs  user.rs
crates/client/src/handler/: auth.rs  category.rs  comments.rs  mod.rs  posts.rs  user.rs
crates/client/src/middleware/: jwt.rs
crates/client/src/service/: auth.rs  category.rs  comment.rs  mod.rs  posts.rs  user.rs
crates/genproto/: Cargo.toml  build.rs
crates/genproto/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/service/: auth.rs  category.rs  comment.rs  mod.rs  posts.rs  user.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  state.rs
crates/shared/src/abstract_trait/: auth.rs  category.rs  comment.rs  file.rs  post.rs  user.rs
crates/shared/src/cache/: cache_helpers.rs
crates/shared/src/config/: database.rs  hashing.rs  jwt.rs  mod.rs  myconfig.rs  redis.rs
crates/shared/src/domain/: mod.rs
crates/shared/src/domain/request/: auth.rs  category.rs  comment.rs  mod.rs  post.rs  user.rs
crates/shared/src/domain/response/: category.rs  comment.rs  mod.rs  pagination.rs  post.rs  user.rs
crates/shared/src/model/: category.rs  comment.rs  posts.rs  user.rs
crates/shared/src/repository/: category.rs  comment.rs  mod.rs  posts.rs  user.rs
crates/shared/src/schema/: category.rs  comment.rs  mod.rs  posts.rs  user.rs
crates/shared/src/service/: auth.rs  category.rs  comment.rs  file.rs  posts.rs  user.rs
crates/shared/src/utils/: di.rs  errors.rs  log.rs  metrics.rs  mod.rs  otel.rs
logs/: rust_app_client.log.2025-07-19  rust_app_server.log.2025-07-19
migrations/: 20250625124714_create_users_table.sql  20250625125818_create_categories_table.sql  20250625125845_create_posts_table.sql  20250625125912_create_comments_table.sql
observability/: promtail-config.yaml
proto/: api.proto  auth.proto  category.proto  comment.proto  post.proto  user.proto
