[package]
name = "shared"
version = "0.1.0"
edition = "2024"


[dependencies]
genproto = { path = "../genproto" }
anyhow = "1.0.98"
async-trait = "0.1.88"
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
sysinfo = "0.34.2"
jsonwebtoken = "9.3.1"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = "0.8.5"
sea-query = "0.32.4"
sea-query-binder = { version = "0.7.0", features = [
    "sqlx-postgres",
    "runtime-async-std-native-tls",
    "with-chrono",
    "with-json",
] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version="0.3.19", features = ["env-filter","registry", "std", "fmt"] }
prometheus-client = "0.23.1"
prometheus-client-derive-encode = "0.4.2"
tracing-opentelemetry = "0.31.0"
opentelemetry = "0.30.0"
opentelemetry-appender-tracing = "0.30.1"
opentelemetry_sdk = { version="0.30.0", features = ["rt-tokio"] }
opentelemetry-stdout = { version="0.30.0", features = ["trace"] }
opentelemetry-otlp = { version="0.30.0", features = ["grpc-tonic"] }
tonic = "0.13.0"
axum = { version = "0.8.4", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
uuid = { version = "1.16.0", features = ["v4"] }
tokio = { version = "1.45.0", features = ["full"] }